--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@cdubz/ckeditor5-source-editing-codemirror",
   "version": "0.0.1",
-  "description": "A plugin for CKEditor 5.",
+  "description": "CodeMirror syntax highlighting in CKEditor 5 source editing mode.",
   "keywords": [
-    "ckeditor",
     "ckeditor5",
-    "ckeditor 5",
     "ckeditor5-feature",
     "ckeditor5-plugin",
     "ckeditor5-dll",
@@ -44,9 +42,11 @@
     "@ckeditor/ckeditor5-media-embed": ">=35.0.1",
     "@ckeditor/ckeditor5-package-tools": "^1.0.0-beta.6",
     "@ckeditor/ckeditor5-paragraph": ">=35.0.1",
+    "@ckeditor/ckeditor5-source-editing": ">=35.0.1",
     "@ckeditor/ckeditor5-table": ">=35.0.1",
     "@ckeditor/ckeditor5-theme-lark": ">=35.0.1",
     "@ckeditor/ckeditor5-upload": ">=35.0.1",
+    "@codemirror/lang-html": "^6.1.0",
     "eslint": "^7.32.0",
     "eslint-config-ckeditor5": ">=4.0.1",
     "http-server": "^14.1.0",
